<resources>
    <!-- App strings -->

    <!-- Main -->
    <string name="app_main_name">Shopping List</string>
    <string name="app_main_welcome">Bienvenue sur Shopping List !</string>
    <string name="app_main_identification">Identification</string>
    <string name="app_main_logout">Deconnexion</string>
    <string name="app_main_registration">Inscription</string>

    <!-- Shopping List -->
    <string name="app_shopping_list">Mes listes de courses</string>
    <string name="app_shopping_list_create">Ajouter une liste</string>
    <string name="app_shopping_list_edit">Editer une liste</string>
    <string name="app_shopping_list_completed">Liste complétée</string>
    <string name="app_shopping_list_not_completed">Liste non complétée</string>

    <!-- Product -->
    <string name="app_product_list">Liste des produits</string>
    <string name="app_product_create">Ajouter un produit</string>
    <string name="app_product_edit">Editer un produit</string>

    <!-- Link / Menu strings -->create
    <string name="link_subscribe">Toujours pas inscrit? Je m\'inscris</string>
    <string name="link_login">Déjà inscrit? Je me connecte</string>

    <!-- Form -->
    <string name="form_user_last_name">Nom</string>
    <string name="form_user_first_name">Prénom</string>
    <string name="form_user_email">E-mail</string>
    <string name="form_user_password">Mot de passe</string>
    <string name="form_shopping_list_name">Nom</string>
    <string name="form_shopping_list_completed">Complétée</string>
    <string name="form_product_name">Nom</string>
    <string name="form_product_quantity">Quantité</string>
    <string name="form_product_price">Prix</string>

    <!-- Form errors -->
    <string name="form_user_email_unvalid">Vous devez renseigner un email valide.</string>
    <string name="form_user_password_empty">Vous devez renseigner un mot de passe.</string>
    <string name="form_user_last_name_empty">Vous devez renseigner votre nom.</string>
    <string name="form_user_first_name_empty">Vous devez renseigner votre prénom.</string>
    <string name="form_shopping_list_name_empty">Vous devez renseigner le nom de votre liste de course.</string>

    <string name="form_product_name_empty">Vous devez renseigner un nom.</string>
    <string name="form_product_price_empty">Vous devez renseigner un prix.</string>
    <string name="form_product_quantity_empty">Vous devez renseigner une quantité.</string>


    <!-- Common -->
    <string name="common_submit">Valider</string>
    <string name="common_create">Créer</string>
    <string name="common_edit">Éditer</string>
    <string name="common_delete">Supprimer</string>
    <string name="common_price">Prix :</string>
    <string name="common_quantity">Quantité :</string>

    <!-- Permissions -->
    <string name="permission_internet">L\'application Shopping List a besoin d\'une connnexion internet.</string>
    <string name="permission_network_state">L\'application Shopping List a besoin de vérifier l\'état de votre connexion.</string>
    <string name="network_not_available">Vous devez vous connecter à Internet pour utiliser l\'application.</string>

    <!-- Messages -->
    <string name="message_subcribed_success">Bienvenue %s !</string>
    <string name="message_subcribed_mail_already_registered">Cet e-mail est déjà enregistré.</string>
    <string name="message_login_success">Vous êtes maintenant connecté.</string>
    <string name="message_login_failed">Connexion échouée, veuillez vérifier vos identifiants.</string>
    <string name="message_logout_success">Vous êtes maintenant déconnecté.</string>
    <string name="message_list_successfully_created">Votre liste a bien été crée.</string>
    <string name="message_list_successfully_edited">Votre liste a bien été éditée.</string>
    <string name="message_list_successfully_remove">Votre liste a bien été supprimée.</string>
    <string name="message_product_successfully_created">Votre produit a bien été créé.</string>
    <string name="message_product_successfully_edited">Votre produit a bien été édité.</string>
    <string name="message_product_successfully_remove">Votre produit a bien été supprimé.</string>
    <string name="message_app_error_occured">Une erreur est survenue (Code = %s)</string>
    <string name="message_app_no_internet">Vous ne semblez pas être connecté à internet.</string>

</resources>