<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app_theme="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_item_edit"
        android:orderInCategory="1"
        android:title="@string/common_edit"
        app_theme:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_item_add"
        android:orderInCategory="2"
        android:title="@string/app_product_create"
        app_theme:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_item_delete"
        android:orderInCategory="2"
        android:title="@string/common_delete"
        app_theme:showAsAction="ifRoom">
    </item>
</menu>