<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblFragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/app_shopping_list_create"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_shopping_list_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtBoxNameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtBoxName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:text="@string/form_shopping_list_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkBoxCompleted" />

        <Button
            android:id="@+id/btnSubmit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_submit" />
    </LinearLayout>

</FrameLayout>
