<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clevermind.shoppinglist.fragments.SubscribeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/app_main_identification"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtLabelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_user_email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtBoxEmailGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtBoxMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtLabelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_user_password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtBoxPasswordGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/txtBoxPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_submit" />

        <TextView
            android:id="@+id/txtLinkSubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_subscribe"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorSecondary" />
    </LinearLayout>

</FrameLayout>
