<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblFragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/app_product_create"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_product_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtBoxNameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtBoxName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_product_quantity" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtBoxQuantityGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtBoxQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_product_price" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtBoxPriceGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtBoxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_submit" />
    </LinearLayout>

</FrameLayout>
